# ros_ws

./: .gitignore
.claude/agents/: hardware-expert.md  motion-expert.md  qa-agent.md  rl-expert.md  supervisor.md
.claude/skills/hardware-debug/: SKILL.md
.claude/skills/motion-dev/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
.claude/skills/rl-interface/: SKILL.md
src/CM_HL_v8/: CMakeLists.txt  package.xml
src/CM_HL_v8/config/: joint_names_CM_HL_v8.yaml
src/CM_HL_v8/launch/: display.launch  display.launch.py  gazebo.launch
src/CM_HL_v8/meshes/: HL_link2_thigh_r.STL  HL_link3_thigh_p.STL  HL_link4_knee_p.STL  HL_link5_ankle_p.STL  HL_link6_toe_p.STL  base_link.STL
src/CM_HL_v8/urdf/: CM_HL_v10.urdf  CM_HL_v11.urdf  CM_HL_v8.csv
src/cpp_pubsub/: package.xml
src/motorcortex_bridge/: package.xml  setup.cfg  setup.py
src/motorcortex_bridge/launch/: motorcortex_rviz.launch.py  motorcortex_sim.launch.py
src/motorcortex_bridge/motorcortex_bridge/: joint_state_bridge.py  joint_state_bridge_v2.py  motion_controller.py  motorcortex_interface.py
src/my_package/: package.xml
